<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/grid_2"
    android:paddingTop="@dimen/grid_2"
    android:paddingBottom="@dimen/grid_1">

    <RadioGroup
        android:id="@+id/rgReadingGoalPeriod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbReadingGoalMonthly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reading_goal_monthly" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbReadingGoalYearly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reading_goal_yearly" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilReadingGoalTarget"
        style="@style/Widget.DijitalRaf.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/grid_2"
        android:hint="@string/reading_goal_target_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etReadingGoalTarget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="3" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>
